correction rapide ui

--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -27,7 +27,7 @@ body {
 h1 {
     text-align: left;
     margin-bottom: 8px;
-    font-weight: 200;
+    font-weight: 400;
 }
 
 .filters {
@@ -91,6 +91,7 @@ table.dataTable thead th {
     box-sizing: border-box;
     border-radius: 30px;
     width: 100%;
+    box-sizing: border-box;
 }
 
 table.dataTable.no-footer {
