--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -90,12 +90,14 @@ table.dataTable thead>tr>th.sorting_desc:after {
 table.dataTable.display>tbody>tr.odd>.sorting_1,
 table.dataTable.display>tbody>tr.even>.sorting_1 {
     box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.015);
+    box-shadow: inset 0 0 0 9999px var(--primary-c-faded);
     border-radius: 0;
 }
 
 table.dataTable.display>tbody>tr.odd:hover>*,
 table.dataTable.display>tbody>tr.even:hover>* {
-    box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.035);
+    /* box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.035); */
+    box-shadow: inset 0 0 0 9999px rgba(86, 172, 252, 0.05);
 }
 
 
@@ -116,7 +118,8 @@ table.dataTable.display td:first-child {
     background-color: transparent;
     border-radius: 30px;
     gap: 0;
-    background-color: var(--semi-transparent);
+    /* background-color: var(--semi-transparent); */
+    background-color: var(--primary-c);
 }
 
 table.dataTable.display tbody td:last-child {
